--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@netrunner/pbf-ts",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "protobuf cli to create typescript declaration files for typescript schemas.",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
